--- a/package.json
+++ b/package.json
@@ -1,23 +1,48 @@
 {
   "name": "mobile",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "8.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-firebase/app": "^18.6.0",
+    "@react-native-firebase/messaging": "^18.6.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "@types/react-native": "^0.72.5",
+    "@types/styled-components": "^5.1.29",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-dev-client": "^2.4.11",
+    "expo-notifications": "~0.20.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "ll": "^1.2.0",
+    "lottie-react-native": "^6.4.0",
+    "onesignal-expo-plugin": "^2.0.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-device-info": "^10.12.0",
+    "react-native-google-mobile-ads": "^12.3.0",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.27.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0",
+    "expo-modules-autolinking": "~1.1.0"
   },
   "private": true
 }
