--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile",
-  "version": "8.0.0",
+  "version": "10.0.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -20,13 +20,18 @@
     "axios": "^1.6.0",
     "expo": "~49.0.15",
     "expo-dev-client": "^2.4.11",
+    "expo-localization": "^14.5.0",
     "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "i": "^0.3.7",
+    "i18next": "^23.7.16",
     "ll": "^1.2.0",
     "lottie-react-native": "^6.4.0",
+    "npm": "^10.2.5",
     "onesignal-expo-plugin": "^2.0.2",
     "react": "18.2.0",
+    "react-i18next": "^14.0.0",
     "react-native": "0.72.6",
     "react-native-device-info": "^10.12.0",
     "react-native-google-mobile-ads": "^12.3.0",
