--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile",
-  "version": "10.0.0",
+  "version": "11.0.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@stripe/stripe-react-native": "0.28.0",
     "@types/react-native": "^0.72.5",
     "@types/styled-components": "^5.1.29",
     "axios": "^1.6.0",
@@ -28,7 +29,7 @@
     "i18next": "^23.7.16",
     "ll": "^1.2.0",
     "lottie-react-native": "^6.4.0",
-    "npm": "^10.2.5",
+    "npm": "^10.5.0",
     "onesignal-expo-plugin": "^2.0.2",
     "react": "18.2.0",
     "react-i18next": "^14.0.0",
