--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Astros y Tarot",
     "slug": "mobile",
-    "version": "12.0.0",
+    "version": "16.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -20,7 +20,8 @@
     },
     "android": {
       "googleServicesFile": "./google-services.json",
-      "versionCode": 12,
+      "versionCode": 16,
+      "permissions": ["com.android.vending.BILLING"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
