--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile",
-  "version": "12.0.0",
+  "version": "16.0.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-firebase/app": "^18.6.0",
     "@react-native-firebase/messaging": "^18.6.0",
@@ -20,6 +21,7 @@
     "axios": "^1.6.0",
     "expo": "~49.0.15",
     "expo-dev-client": "^2.4.11",
+    "expo-in-app-purchases": "~14.3.0",
     "expo-localization": "^14.5.0",
     "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
@@ -31,12 +33,15 @@
     "npm": "^10.5.0",
     "onesignal-expo-plugin": "^2.0.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^14.0.0",
     "react-native": "0.72.6",
     "react-native-device-info": "^10.12.0",
     "react-native-google-mobile-ads": "^12.3.0",
-    "react-native-safe-area-context": "^4.7.3",
-    "react-native-screens": "^3.27.0",
+    "react-native-purchases": "^7.27.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
